# ScienceWorld

./: .gitignore  MANIFEST.in  build_dists.sh  build_dists2.sh  setup.cfg  setup.py
scienceworld/: scienceworld.py
simulator/src/main/scala/scienceworld/runtime/pythonapi/: PythonInterface.scala
