[metadata]
name = scienceworld
description = ScienceWorld: An interactive text environment to study AI agents on accomplishing tasks from the standardized elementary science curriculum.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://scienceworld.github.io
author = Peter Jansen
license = Apache 2.0
license_files = LICENSE

[options]
packages = find:
include_package_data = True
install_requires =
    py4j
python_requires = >=3.7

[options.extras_require]
webserver =
    pywebio
dev =
    scienceworld[webserver]
    build
    pre-commit
    pytest
    twine

[options.package_data]
sdf = py.typed
